docs/v5.6.1/_sources/gallery/experiment/cylinder/coupling_vs_wavelength.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/cylinder/coupling_vs_wavelength.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_cylinder_coupling_vs_wavelength.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_cylinder_coupling_vs_wavelength.py:


InfiniteCylinder: Coupling vs Wavelength
========================================

This example demonstrates how to compute and visualize the coupling efficiency as a function of wavelength for cylindrical scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 7-53



.. image-sg:: /gallery/experiment/cylinder/images/sphx_glr_coupling_vs_wavelength_001.png
   :alt: coupling vs wavelength
   :srcset: /gallery/experiment/cylinder/images/sphx_glr_coupling_vs_wavelength_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c2b7a90>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30bfe8850>, <matplotlib.lines.Line2D object at 0x7fe30c3f7c90>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c3f51d0>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        CoherentModeSet,
        InfiniteCylinderSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[30.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=np.linspace(950, 1050, 300) * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = InfiniteCylinderSet(
        diameter=np.linspace(300, 500, 5) * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[1],
    )

    detector = CoherentModeSet(
        mode_number=["LP11"],
        numerical_aperture=[0.05, 0.01],
        phi_offset=[-180] * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        sampling=[300],
        rotation=[0] * ureg.degree,
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="source:wavelength", std="scatterer:diameter")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.402 seconds)


.. _sphx_glr_download_gallery_experiment_cylinder_coupling_vs_wavelength.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_wavelength.ipynb <coupling_vs_wavelength.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_wavelength.py <coupling_vs_wavelength.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_wavelength.zip <coupling_vs_wavelength.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
